[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "EnORM"
version = "1.0.2"
authors = [
  { name="Nima Bavari", email="nima.bavari@gmail.com" },
]
description = "EnORM—EnDATA Object Relational Mapper."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/NimaBavari/EnORM"
"Bug Tracker" = "https://github.com/NimaBavari/EnORM/issues"