[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "EnORM"
version = "1.2.0"
authors = [
  { name="Nima Bavari", email="nima.bavari@gmail.com" },
]
description = "EnORM—EnDATA Object Relational Mapper."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "macaddress>=2.0.2",
  "pyodbc>=5.2.0",
  "shapely>=2.0.6",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/NimaBavari/EnORM"
"Bug Tracker" = "https://github.com/NimaBavari/EnORM/issues"